# moses

./: .gitignore  CMakeLists.txt  README.md  moses.kdev4
.kdev4/: moses.kdev4
dep/: buildDependancies.sh
include/: .meshStructures.h.kate-swp  MSHParser.bak  MSHParser.h  exoCommunicator.h  exoConverter.h  fileReader.h  main.h  mergeData.h  meshStructures.h  sidesetFinder.h
src/: .kdev_include_paths  MSHParser.bak  MSHParser.cpp  exoCommunicator.cpp  exoConverter.cpp  fileReader.cpp  main.cpp  mergeData.cpp  mergeNodes.cpp  sidesetFinder.cpp
testMeshes/: 3dmesh.msh  noTags.msh  tags.msh
